added metro app

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="grid-container">
         <div class="left">
             <h3>Transportación</h3>
-            <p>Manejamos al aeropuerto en coche. Después volamos en avión a la ciudad de México. Cuando estamos en la ciudad vamos a usar los servicios de taxis, metro y autobuses. <br>También puede descargar la aplicación en su teléfono.</p>
+            <p>Manejamos al aeropuerto en coche. Después volamos en avión a la ciudad de México. Cuando estamos en la ciudad vamos a usar los servicios de taxis, metro y autobuses. <br>También puede descargar la aplicación del metro en su teléfono.</p>
             <h3>Habitación</h3>
             <p>Dormimos en hoteles porque cuestan menos de los Estados Unidos.</p>
         </div>
