--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <img src="cdmx.png" alt="">
             <div>
                 <h3>Mi hermano</h3>
-                <p>El teine pelo negro y el es dos anos mas viejo de yo.</p>
+                <p>El teine pelo negro y el es dos años mas viejo de yo.</p>
                 <h3>Mi mamá</h3>
                 <p>Ella es corta y inteligente.</p>
                 <h3>Mi papá</h3>
